book/base/book-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-vs
spec:
  hosts:
  - "*"
  gateways:
  - book-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ui-service
        port:
          number: 8080
